WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83309
[GTK] Scrolling some iframes that are partially out of the viewport leads to repaint errors
https://bugs.webkit.org/show_bug.cgi?id=83309
Summary
[GTK] Scrolling some iframes that are partially out of the viewport leads to ...
Martin Robinson
Reported
2012-04-05 13:37:26 PDT
To reproduce: 1. Embed an iframe which has scrollable content with a non-white background color. 2. Scroll the iframe partially out of the viewport. 3. Scroll the iframe itself. This leads to scrolling errors like those shown in the attached screenshot.
Attachments
Failing version of the layout test output
(25.24 KB, image/png)
2012-04-05 13:50 PDT
,
Martin Robinson
no flags
Details
Patch
(49.83 KB, patch)
2012-04-05 14:12 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2012-04-05 13:50:12 PDT
Created
attachment 135895
[details]
Failing version of the layout test output
Martin Robinson
Comment 2
2012-04-05 14:12:50 PDT
Created
attachment 135903
[details]
Patch
WebKit Review Bot
Comment 3
2012-04-05 15:18:53 PDT
Comment on
attachment 135903
[details]
Patch Clearing flags on attachment: 135903 Committed
r113386
: <
http://trac.webkit.org/changeset/113386
>
WebKit Review Bot
Comment 4
2012-04-05 15:18:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug