[GTK] Scrolling some iframes that are partially out of the viewport leads to repaint errors https://bugs.webkit.org/show_bug.cgi?id=83309

Patch by Martin Robinson <mrobinson@igalia.com> on 2012-04-05
Reviewed by Gustavo Noronha Silva.

Source/WebCore:

Test: platform/gtk/fast/frames/scrolling-iframe-out-of-viewport.html

The X11 backing store was not properly trimming the scroll region when it
was only a portion of the screen. This was hidden by subsequent repaints.

* platform/gtk/GtkWidgetBackingStoreX11.cpp:
(WebCore::WidgetBackingStore::scroll): Fix the calculation of the scrolling region.

Source/WebKit/gtk:

Instead of only updating scrollRect - preservedRegion, update
scrollRect - (preservedRegion - offscreenPreservedRegion). This ensures that
when part of the scroll rect is moved onscreen from offscreen that part is
queued for a redraw.

* WebCoreSupport/ChromeClientGtk.cpp:
(WebKit::ChromeClient::scroll): Properly calculate the area to repaint.

LayoutTests:

Added a pixel test for this issue.

* platform/gtk/fast/frames/resources/scrolling-iframe-out-of-viewport-interior.html: Added.
* platform/gtk/fast/frames/scrolling-iframe-out-of-viewport-expected.png: Added.
* platform/gtk/fast/frames/scrolling-iframe-out-of-viewport-expected.txt: Added.
* platform/gtk/fast/frames/scrolling-iframe-out-of-viewport.html: Added.

Canonical link: https://commits.webkit.org/100718@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113386 268f45cc-cd09-0410-ab3c-d52691b4dbfc